// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.admin.v1;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "com/digitalasset/canton/domain/admin/v0/sequencer_administration_service.proto";
import "com/digitalasset/canton/domain/admin/v0/sequencer_initialization_snapshot.proto";
import "com/digitalasset/canton/protocol/v0/sequencing.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

message SequencerSnapshot {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.UnstableProtoVersion";

  google.protobuf.Timestamp latest_timestamp = 1;
  // Changed from map<string, int64> in v0 to explicit repeated so that we control the order of the entries
  repeated MemberCounter head_member_counters = 2;
  com.digitalasset.canton.domain.admin.v0.SequencerPruningStatus status = 3;
  com.digitalasset.canton.domain.admin.v0.ImplementationSpecificInfo additional = 4;
  // New in v1
  repeated InFlightAggregationWithId in_flight_aggregations = 5;
  // New in v1
  repeated MemberTrafficSnapshot traffic_snapshots = 6;

  message MemberCounter {
    string member = 1;
    int64 sequencer_counter = 2;
  }

  message InFlightAggregationWithId {
    bytes aggregation_id = 1;
    com.digitalasset.canton.protocol.v0.AggregationRule aggregation_rule = 2;
    google.protobuf.Timestamp max_sequencing_time = 3;
    repeated AggregationBySender aggregated_senders = 4;
  }

  message AggregationBySender {
    string sender = 1;
    google.protobuf.Timestamp sequencing_timestamp = 2;
    repeated SignaturesForEnvelope signatures_by_envelope = 3;
  }

  message SignaturesForEnvelope {
    repeated com.digitalasset.canton.crypto.v0.Signature signatures = 3;
  }

  message MemberTrafficSnapshot {
    string member = 1;
    uint64 extra_traffic_remainder = 2;
    uint64 extra_traffic_consumed = 3;
    uint64 base_traffic_remainder = 4;
    google.protobuf.Timestamp sequencing_timestamp = 5;
  }
}
